--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -19,12 +19,13 @@ jobs:
       uses: webfactory/ssh-agent@v0.5.3
       with:
         ssh-private-key: ${{ secrets.SSH_PRIVATE_KEY }}
-    - name: RUN SUDO APT
-      run: |
-        sudo ufw status
-        sudo apt update
-
-    # # Copy docker-compose.yml lên VPS
-    # - name: Copy docker-compose.yml to VPS
+        
+    # - name: RUN SUDO APT
     #   run: |
-    #     scp docker-compose.yml ${{ secrets.VPS_USER }}@${{ secrets.VPS_IP }}:/home/anhtaidang/workspace/docker-implement
+    #     sudo ufw status
+    #     sudo apt update
+
+    # Copy docker-compose.yml lên VPS
+    - name: Copy docker-compose.yml to VPS
+      run: |
+        scp docker-compose.yml ${{ secrets.VPS_USER }}@${{ secrets.VPS_IP }}:/home/anhtaidang/workspace/docker-implement
