--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -20,12 +20,14 @@ jobs:
       with:
         ssh-private-key: ${{ secrets.SSH_PRIVATE_KEY }}
         
-    # - name: RUN SUDO APT
-    #   run: |
-    #     sudo ufw status
-    #     sudo apt update
+    - name: RUN SUDO APT
+      run: |
+        docker --version
 
     # Copy docker-compose.yml lên VPS
-    - name: Copy docker-compose.yml to VPS
-      run: |
-        scp docker-compose.yml ${{ secrets.VPS_USER }}@${{ secrets.VPS_IP }}:/home/anhtaidang/workspace/docker-implement
+    # - name: Copy docker-compose.yml to VPS
+    #   uses: webfactory/ssh-agent@v0.5.3
+    #   with:
+    #     ssh-private-key: ${{ secrets.SSH_PRIVATE_KEY }}
+    #   run: |
+    #     scp docker-compose.yml ${{ secrets.VPS_USER }}@${{ secrets.VPS_IP }}:/home/anhtaidang/workspace/docker-implement
