--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -19,6 +19,12 @@ jobs:
       uses: webfactory/ssh-agent@v0.5.3
       with:
         ssh-private-key: ${{ secrets.SSH_PRIVATE_KEY }}
+
+    - name: Print GitHub environment variables
+      run: |
+        echo "Repository: $GITHUB_REPOSITORY"
+        echo "Branch/Tag: $GITHUB_REF"
+        echo "Commit SHA: $GITHUB_SHA"
         
     - name: RUN SUDO APT
       run: |
@@ -27,6 +33,6 @@ jobs:
     # Copy docker-compose.yml lên VPS
     - name: Copy docker-compose.yml to VPS
       run: |
-        scp -o StrictHostKeyChecking=no docker-compose.yml ${{ secrets.VPS_USER }}@${{ secrets.VPS_IP }}:${DOCKER_IMPLEMENT_PATH}
-        scp -o StrictHostKeyChecking=no .env ${{ secrets.VPS_USER }}@${{ secrets.VPS_IP }}:${DOCKER_IMPLEMENT_PATH}
+        scp -o StrictHostKeyChecking=no docker-compose.yml ${{ secrets.VPS_USER }}@${{ secrets.VPS_IP }}:$DOCKER_IMPLEMENT_PATH
+        # scp -o StrictHostKeyChecking=no .env ${{ secrets.VPS_USER }}@${{ secrets.VPS_IP }}:$DOCKER_IMPLEMENT_PATH
         docker-compose up -d
