--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -25,7 +25,7 @@ jobs:
         echo "Repository: $GITHUB_REPOSITORY"
         echo "Branch/Tag: $GITHUB_REF"
         echo "Commit SHA: $GITHUB_SHA"
-        echo "${{ env.DOCKER_IMPLEMENT_PATH }}"
+        echo "CHECK ${{ vars.DOCKER_IMPLEMENT_PATH }}"
         
     - name: RUN SUDO APT
       run: |
