--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -42,7 +42,7 @@ jobs:
     - name: Deploy application with Docker Compose
       run: |
         ssh -o StrictHostKeyChecking=no ${{ secrets.VPS_USER }}@${{ secrets.VPS_IP }} << 'EOF'
-        cd ${{ env.DOCKER_PATH }}
+        cd ${{ vars.DOCKER_PATH }}
         ls -a
         docker-compose up -d --build
         EOF
