--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -14,7 +14,7 @@ jobs:
     - name: Checkout code
       uses: actions/checkout@v3
 
-    # Thiết lập SSH
+    # Setting SSH connect
     - name: Set up SSH
       uses: webfactory/ssh-agent@v0.5.3
       with:
@@ -31,26 +31,34 @@ jobs:
       run: |
         docker --version
 
-    # Copy docker-compose.yml lên VPS
+    # Copy docker-compose.yml to VPS
     - name: Copy docker-compose.yml to VPS
       run: |
         scp -o StrictHostKeyChecking=no docker-compose.yml ${{ secrets.VPS_USER }}@${{ secrets.VPS_IP }}:${{ env.DOCKER_IMPLEMENT_PATH }}
         scp -o StrictHostKeyChecking=no .env ${{ secrets.VPS_USER }}@${{ secrets.VPS_IP }}:${{ env.DOCKER_IMPLEMENT_PATH }}
 
     # Connect SSH & RUN docker-compose
-    - name: Deploy application with Docker Compose
+    - name: Connect SSH & RUN docker-compose
       run: |
         ssh -o StrictHostKeyChecking=no ${{ secrets.VPS_USER }}@${{ secrets.VPS_IP }} << 'EOF'
 
         if [ -d ${{ env.DOCKER_IMPLEMENT_PATH }} ]; then
-          echo 'Folder exists';
+          echo 'Folder exists ${{ env.DOCKER_IMPLEMENT_PATH }}';
         else
           echo 'Folder does not exist';
-          exit 1;
+          # exit 1;
+          echo '[RUN]: mkdir ${{ env.DOCKER_IMPLEMENT_PATH }}';
+          mkdir ${{ env.DOCKER_IMPLEMENT_PATH }};
         fi
 
-        echo "CD to ${{ vars.DOCKER_PATH }}"
+        echo "Acccess to ${{ vars.DOCKER_PATH }}"
         cd ${{ vars.DOCKER_PATH }}
+
+        echo '=========';
         ls -a
+        echo '=========';
+
+        echo '[RUN]:  docker-compose up -d --build';
         docker-compose up -d --build
+
         EOF
