--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -25,44 +25,46 @@ jobs:
         echo "Repository: $GITHUB_REPOSITORY"
         echo "Branch/Tag: $GITHUB_REF"
         echo "Commit SHA: $GITHUB_SHA"
+        echo "VARS =================================="
         echo "CHECK ${{ vars.DOCKER_IMPLEMENT_PATH }}"
+        echo "CHECK ${{ vars.DOCKER_PATH }}"
     
     - name: RUN SUDO APT
       run: |
         docker --version
 
-    # Copy docker-compose.yml to VPS
+    # Copy docker-compose.yml .env to VPS
     - name: Copy docker-compose.yml to VPS
       run: |
         ssh -o StrictHostKeyChecking=no ${{ secrets.VPS_USER }}@${{ secrets.VPS_IP }} << 'EOF'
         
-        if [ -d ${{ env.DOCKER_IMPLEMENT_PATH }} ]; then
-          echo 'Folder exists ${{ env.DOCKER_IMPLEMENT_PATH }}';
+        if [ -d ${{ vars.DOCKER_IMPLEMENT_PATH }} ]; then
+          echo 'Folder exists ${{ vars.DOCKER_IMPLEMENT_PATH }}';
         else
           echo 'Folder does not exist';
           # exit 1;
-          echo '[RUN]: mkdir ${{ env.DOCKER_IMPLEMENT_PATH }}';
-          mkdir ${{ env.DOCKER_IMPLEMENT_PATH }};
+          echo '[RUN]: mkdir ${{ vars.DOCKER_PATH }}';
+          mkdir ${{ vars.DOCKER_PATH }};
         fi
-        
-        EOF
-        
-        scp -o StrictHostKeyChecking=no docker-compose.yml ${{ secrets.VPS_USER }}@${{ secrets.VPS_IP }}:${{ env.DOCKER_IMPLEMENT_PATH }}
-        scp -o StrictHostKeyChecking=no .env ${{ secrets.VPS_USER }}@${{ secrets.VPS_IP }}:${{ env.DOCKER_IMPLEMENT_PATH }}
-
-    # Connect SSH & RUN docker-compose
-    - name: Connect SSH & RUN docker-compose
-      run: |
-        ssh -o StrictHostKeyChecking=no ${{ secrets.VPS_USER }}@${{ secrets.VPS_IP }} << 'EOF'
-
-        echo "Acccess to ${{ vars.DOCKER_PATH }}"
-        cd ${{ vars.DOCKER_PATH }}
-
-        echo '=========';
-        ls -a
-        echo '=========';
-
-        echo '[RUN]:  docker-compose up -d --build';
-        docker-compose up -d --build
 
         EOF
+        
+        scp -o StrictHostKeyChecking=no docker-compose.yml ${{ secrets.VPS_USER }}@${{ secrets.VPS_IP }}:${{ vars.DOCKER_IMPLEMENT_PATH }}
+        scp -o StrictHostKeyChecking=no .env ${{ secrets.VPS_USER }}@${{ secrets.VPS_IP }}:${{ vars.DOCKER_IMPLEMENT_PATH }}
+
+    # # Connect SSH & RUN docker-compose
+    # - name: Connect SSH & RUN docker-compose
+    #   run: |
+    #     ssh -o StrictHostKeyChecking=no ${{ secrets.VPS_USER }}@${{ secrets.VPS_IP }} << 'EOF'
+
+    #     echo "Acccess to ${{ vars.DOCKER_PATH }}"
+    #     cd ${{ vars.DOCKER_PATH }}
+
+    #     echo '=========';
+    #     ls -a
+    #     echo '=========';
+
+    #     echo '[RUN]:  docker-compose up -d --build';
+    #     docker-compose up -d --build
+
+    #     EOF
