--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -51,22 +51,23 @@ jobs:
 
         EOF
         
+        echo 'Staring scp...';
         scp -o StrictHostKeyChecking=no docker-compose.yml ${{ secrets.VPS_USER }}@${{ secrets.VPS_IP }}:${{ vars.DOCKER_IMPLEMENT_PATH }}
         scp -o StrictHostKeyChecking=no .env ${{ secrets.VPS_USER }}@${{ secrets.VPS_IP }}:${{ vars.DOCKER_IMPLEMENT_PATH }}
 
-    # # Connect SSH & RUN docker-compose
-    # - name: Connect SSH & RUN docker-compose
-    #   run: |
-    #     ssh -o StrictHostKeyChecking=no ${{ secrets.VPS_USER }}@${{ secrets.VPS_IP }} << 'EOF'
+    # Connect SSH & RUN docker-compose
+    - name: Connect SSH & RUN docker-compose
+      run: |
+        ssh -o StrictHostKeyChecking=no ${{ secrets.VPS_USER }}@${{ secrets.VPS_IP }} << 'EOF'
 
-    #     echo "Acccess to ${{ vars.DOCKER_PATH }}"
-    #     cd ${{ vars.DOCKER_PATH }}
+        echo "Acccess to ${{ vars.DOCKER_PATH }}"
+        cd ${{ vars.DOCKER_PATH }}
 
-    #     echo '=========';
-    #     ls -a
-    #     echo '=========';
+        echo '=========';
+        ls -a
+     
+        echo '=========';
+        echo '[RUN]:  docker-compose up -d --build';
+        docker-compose up -d --build
 
-    #     echo '[RUN]:  docker-compose up -d --build';
-    #     docker-compose up -d --build
-
-    #     EOF
+        EOF
